--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
+
 <body class="general">
 	<div class="jumbotron">
 		<div class="container">
@@ -15,7 +16,7 @@
 	<div id="columns">
 		<div class="container">
 			<div class="row">
-				<form action="/member/login" method="POST">
+				<form action="/login" method="POST">
 					<div class="form-group">
 						<label for="username">username</label> <input type="text"
 							class="form-control" id="username" name="username"
