added placeholder for thymeleaf

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="jumbotron">
 		<div class="container">
-			<h3>Fairytales start</h3>
+			<h3>Fairytales the beginning</h3>
 		</div>
 	</div>
 	<div class="container">
