--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
 		<div>
 			<a href="/fairytale/index.html?entity=FairyTale&amp;action=DISPLAY">fairytales</a>
 		</div>
+		
+		<div>
+			<a href="/passwordReset/passwordLost.html">password lost</a>
+		</div>
 	</div>
 
 </body>
