--- a/templates/fairytale/detail.html
+++ b/templates/fairytale/detail.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	th:with="fairytale=${context.get('FairyTale')}">
+
+
 <head>
 <title>edit fairytale</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -9,13 +11,23 @@
 </head>
 
 <body>
+
 	<div class="container">
-		<h3 class="overview">Edit fairytale</h3>
-		<form method="POST" th:action="'detail.html?entity=FairyTale{' + ${fairytale.id} '}&amp;action=UPDATE'">
+		<h3 class="overview">
+			Edit fairytale "<span th:text="${fairytale.name}"></span>"
+		</h3>
+
+		<form method="POST"
+			th:action="'detail.html?entity=FairyTale(id:' + ${fairytale.id} + ')&amp;action=UPDATE'">
 			<div class="form-group">
 				<label for="ft_id" class="control-label">ID</label> <input
 					id="ft_id" class="form-control" readonly="readonly"
 					name="FairyTale.id" th:value="${fairytale.id}" />
+			</div>
+			<div class="form-group">
+				<label for="ft_id" class="control-label">last modified</label> <input
+					id="ft_id" class="form-control" readonly="readonly"
+					name="FairyTale.modifiedOn" th:value="${fairytale.modifiedOn}" />
 			</div>
 			<div class="form-group">
 				<label for="ft_name" class="control-label">Name</label> <input
@@ -31,7 +43,9 @@
 			<div class="form-group">
 				<button class="btn btn-primary pull-right" type="submit" name="SAVE">SAVE</button>
 			</div>
+
 		</form>
 	</div>
+
 </body>
 </html>
