--- a/templates/mails/passwordLostEmail.html
+++ b/templates/mails/passwordLostEmail.html
@@ -5,13 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body  th:with="m = ${context.get('authenticatable')}">
-
-
-	dear
-	<span th:text="${m.firstName}"
-		th:remove="tag"></span>
-	<span th:text="${m.lastName}"
-		th:remove="tag"></span>, the password reset link:
+	dear <span th:text="${m.firstName}" th:remove="tag"></span>
+	<span th:text="${m.lastName}" th:remove="tag"></span>, the password reset link:
 	<a th:href="${host}+'/passwordReset?validationId='+${context.get('validationId')}"
 		target="_blank">RESET NOW</a>
 </body>
